Added new functionality.

--- a/public_html/RigidSphere.html
+++ b/public_html/RigidSphere.html
@@ -16,7 +16,7 @@
     <!-- Write your comments here -->
     <body>
         <!-- Write your comments here -->
-        <div id="tabSetStyle">
+        <div id="header">
         <!-- Write your comments here -->    
         </div>
         <!-- Write your comments here -->
