Added instructions to fluid sphere.

--- a/public_html/FluidSphere.html
+++ b/public_html/FluidSphere.html
@@ -99,7 +99,7 @@
         <!-- Write your comments here -->
         <button type="button" class="input" id="mathButton" onclick="expandMathBlock();">Mathematics</button>
         <!-- Write your comments here -->
-        <button type="button" class="input" id="instructionButton" onclick="">Instructions</button>
+        <button type="button" class="input" id="instructionButton" onclick="expandInstructionBlock();">Instructions</button>
         <!-- Write your comments here -->
         <button type="button" class="input" id="exampleButton" onclick="plotExampleSolution();">Plot Example</button>
         <div id="acousticScatteringForAFluidSphereChart"></div>
@@ -120,7 +120,10 @@
         <!-- Write your comments here --> 
         <div id="mathBlock" >
             <img id="fluidSphereMath" alt="Reflectivity Mathematics" src="Graphics/FluidSphereMath.png">
-        </div>    
+        </div>   
+        <div id="instructionBlock" >
+            <img id="fluidSphereInstructions" alt="FluidSphereInstructions" src="Graphics/FluidSphereInstructionsGraphic.png">
+        </div> 
     <!-- Write your comments here -->    
     </body>
 <!-- Write your comments here -->    
