--- a/public_html/RigidSphere.html
+++ b/public_html/RigidSphere.html
@@ -26,11 +26,11 @@
         <!-- Write your comments here -->
         <div id="AcousticScatteringFromARigidSphereInputBlock">
             <!-- Write your comments here -->
-            <div id="temperatureLabel" class="label">Water Temp</div>
+            <div id="temperatureLabel" class="label">Water Temp(°C)</div>
             <!-- Write your comments here -->
-            <div id="salinityLabel" class="label">Water Salinity</div>
+            <div id="salinityLabel" class="label">Water Salinity(ppt)</div>
             <!-- Write your comments here -->
-            <div id="depthLabel" class="label">Water Depth</div>
+            <div id="depthLabel" class="label">Water Depth(m)</div>
             <!-- Write your comments here -->
             <input type="text" class="input" id="temperature" placeholder="(°C)" value = "" onclick="calculateSeaWaterPropertiesOnClick();" onkeydown="calculateSeaWaterPropertiesOnClick();"><br>
             <!-- Write your comments here -->
@@ -38,23 +38,23 @@
             <!-- Write your comments here -->
             <input type="text" class="input" id="depth" placeholder="(m)" value = "" onclick="calculateSeaWaterPropertiesOnClick();" onkeydown="calculateSeaWaterPropertiesOnClick();"><br>
             <!-- Write your comments here -->
-            <div id="waterDensityLabel" class="label">Water Density</div>
+            <div id="waterDensityLabel" class="label">Water Density(kg/m^3)</div>
             <!-- Write your comments here -->
             <input type="text" class="input" id="waterDensity" placeholder="(kg/m^3)" value = "" onclick="setFactorsOnclick();" onkeydown="setFactorsOnclick();">
             <!-- Write your comments here -->
-            <div id="waterWaveVelocityLabel" class="label">W Sound Velocity</div>
+            <div id="waterWaveVelocityLabel" class="label">W Sound Velocity(m/s)</div>
             <!-- Write your comments here -->
             <input type="text" class="input" id="waterWaveVelocity" placeholder="(m/s)" value = "" onclick="setFactorsOnclick();" onkeydown="setFactorsOnclick();">
             <!-- Write your comments here -->
-            <div id="sphereDensityLabel" class="label">Sphere Density</div>
+            <div id="sphereDensityLabel" class="label">Sphere Density(kg/m^3)</div>
             <!-- Write your comments here -->
             <input type="text" class="input" id="sphereDensity" onclick="setFactorsOnclick();" onkeydown="setFactorsOnclick();" value="Infinity" placeholder="(kg/m^3)">
             <!-- Write your comments here -->
-            <div id="sphereWaveVelocityLabel" class="label">S Sound Velocity</div>
+            <div id="sphereWaveVelocityLabel" class="label">S Sound Velocity(m/s)</div>
             <!-- Write your comments here -->
             <input type="text" class="input" id="sphereWaveVelocity" onclick="setFactorsOnclick();" onkeydown="setFactorsOnclick();" value="Infinity" placeholder="(m/s)">
             <!-- Write your comments here -->
-            <div id="sphereRadiusLabel" class="label">Sphere Radius</div>
+            <div id="sphereRadiusLabel" class="label">Sphere Radius(m)</div>
             <!-- Write your comments here -->
             <input type="text" class="input" id="sphereRadius" onclick="setFactorsOnclick();" onkeydown="setFactorsOnclick();" value="" placeholder="(m)">
             <!-- Write your comments here -->
@@ -66,15 +66,15 @@
             <!-- Write your comments here -->
             <input type="text" class="input" id="hFactor">
             <!-- Write your comments here -->
-            <div id="upperBoundLabel" class="label">Upper Bound</div>
+            <div id="upperBoundLabel" class="label">Upper Bound(Hz)</div>
             <!-- Write your comments here -->
             <input type="text" class="input" id="upperBoundInput" value="" placeholder="(Hz)">
             <!-- Write your comments here -->
-            <div id="lowerBoundLabel" class="label">Lower Bound</div>
+            <div id="lowerBoundLabel" class="label">Lower Bound(Hz)</div>
             <!-- Write your comments here -->
             <input type="text" class="input" id="lowerBoundInput" value="" placeholder="(Hz)">
             <!-- Write your comments here -->
-            <div id="incrementLabel" class="label">Step Size</div>
+            <div id="incrementLabel" class="label">Step Size(Hz)</div>
             <!-- Write your comments here -->
             <input type="text" class="input" id="incrementInput" value="" placeholder="(Hz)">
             <!-- Write your comments here -->
